# quasar

./: CMakeLists.txt
.github/workflows/: build-binaries.yml
docs/: docs.md
site/: index.html
site/docs/: index.html
site/search/: search_index.json
src/: Quasar.cpp  ScoreTest.cpp
